# Sentinel

./: .gitignore  Cargo.toml  Makefile  build.rs  execstart.sh  sentinel.service  test  test_malware.sh
.github/workflows/: release.yml
c_code/: helper.c  helper.h
c_code/elf/: predict.c
c_code/exe/: lief_custom_wrapper.cpp  predict.c
model/: json2bin.py
model/elf/: model.json  model.ubj  predict.py
model/win32/: model.json  model.ubj  predict.py
rust_lib/: Cargo.toml
rust_lib/src/args_parser/: mod.rs
rust_lib/src/args_parser/file_scanner/: mod.rs
rust_lib/src/args_parser/process_behaviors_analyzer/: mod.rs
src/: main.rs
