[package]
name = "rust_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
walkdir = "2.5.0"
rusqlite = "0.37.0"
sha2 = "0.11.0-rc.3"
hex = "0.4.3"
chrono = "0.4.42"
goblin = "0.10.4"
sysinfo = "0.37.2"
procfs = "0.18.0"
system-uptime = "0.1.2"
colored = "3.0.0"
